# frobs_rl_resources

./: .gitignore  README.md  log
abb_irb120_reacher/abb_irb120/: CMakeLists.txt  package.xml
abb_irb120_reacher/abb_irb120/config/: irb120_pos_controller.yaml  irb120_vel_controller.yaml
abb_irb120_reacher/abb_irb120/launch/: irb120_gazebo.launch  irb120_rviz.launch  spawn_model_gazebo.launch
abb_irb120_reacher/abb_irb120/rviz/: config.rviz
abb_irb120_reacher/abb_irb120/urdf/: irb120.urdf.xacro  irb120_joints.xacro
abb_irb140_reacher/abb_irb140/: CMakeLists.txt  README.md  package.xml
abb_irb140_reacher/abb_irb140/config/: irb140_pos_controller.yaml  irb140_vel_controller.yaml  joints.yaml
abb_irb140_reacher/abb_irb140/config/joints/: joints.yaml
abb_irb140_reacher/abb_irb140/config/rviz/: rviz_config.rviz  rviz_gazebo_config.rviz
abb_irb140_reacher/abb_irb140/launch/: irb140_gazebo.launch  irb140_moveit.launch  irb140_rviz.launch  irb140_servo.launch  irb140_vel_gazebo.launch  spawn_model_gazebo.launch  spawn_vel_model_gazebo.launch
abb_irb140_reacher/abb_irb140/meshes/collision_low_poly/: link_1.stl  link_4.stl  link_5.stl  link_6.stl
abb_irb140_reacher/abb_irb140/meshes/visual/: base_link.stl  link_2.stl  link_3.stl  link_5.stl  link_6.stl
abb_irb140_reacher/abb_irb140/rviz/: config.rviz  config_moveit.rviz
abb_irb140_reacher/abb_irb140/urdf/: irb140.gazebo  irb140.gazebo.xacro  irb140.urdf.xacro  irb140.xacro  irb140_joints.xacro  irb140_vel.urdf.xacro  joint_macros.xacro
abb_irb140_reacher/abb_irb140_reacher/: CMakeLists.txt  latest  package.xml
abb_irb140_reacher/abb_irb140_reacher/config/: abb_servo_config.yaml  reacher_task.yaml  reacher_task_pos.yaml  td3.yaml  td3_pos.yaml
abb_irb140_reacher/abb_irb140_reacher/launch/: irb140_moveit.launch  moveit_init.launch  test_reacher.launch
abb_irb140_reacher/abb_irb140_reacher/rviz/: config.rviz
abb_irb140_reacher/abb_irb140_reacher/src/: log  test_env.py  train.py  train_model.py  train_model_pos.py  validate.py
abb_irb140_reacher/abb_irb140_reacher/validate/test_0/: goal_episode_0.txt  test_0.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_1/: goal_episode_1.txt  test_1.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_10/: goal_episode_10.txt  test_10.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_11/: goal_episode_11.txt  test_11.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_12/: goal_episode_12.txt  test_12.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_13/: goal_episode_13.txt  test_13.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_14/: goal_episode_14.txt  test_14.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_15/: goal_episode_15.txt  test_15.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_16/: goal_episode_16.txt  test_16.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_17/: goal_episode_17.txt  test_17.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_18/: goal_episode_18.txt  test_18.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_19/: goal_episode_19.txt  test_19.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_2/: goal_episode_2.txt  test_2.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_20/: goal_episode_20.txt  test_20.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_21/: goal_episode_21.txt  test_21.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_22/: goal_episode_22.txt  test_22.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_23/: goal_episode_23.txt  test_23.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_24/: goal_episode_24.txt  test_24.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_25/: goal_episode_25.txt  test_25.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_26/: goal_episode_26.txt  test_26.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_27/: goal_episode_27.txt  test_27.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_28/: goal_episode_28.txt  test_28.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_29/: goal_episode_29.txt  test_29.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_3/: goal_episode_3.txt  test_3.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_30/: goal_episode_30.txt  test_30.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_31/: goal_episode_31.txt  test_31.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_32/: goal_episode_32.txt  test_32.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_33/: goal_episode_33.txt  test_33.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_34/: goal_episode_34.txt  test_34.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_35/: goal_episode_35.txt  test_35.bag
abb_irb140_reacher/abb_irb140_reacher/validate/test_36/: goal_episode_36.txt  test_36.bag
abb_irb140_reacher/abb_irb140_reacher/worlds/: no_collision.world
kobuki_maze/kobuki_desktop/kobuki_gazebo/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_maze/kobuki_desktop/kobuki_gazebo_plugins/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_maze/kobuki_maze_rl/: CMakeLists.txt  package.xml
kobuki_maze/kobuki_maze_rl/config/: dynamic_obj_task.yaml  maze_task.yaml  sac.yaml  td3.yaml
kobuki_maze/kobuki_maze_rl/launch/: visualize_gazebo.launch
kobuki_maze/kobuki_maze_rl/rviz/: config.rviz
kobuki_maze/kobuki_maze_rl/src/: test_env.py  test_model.py  test_robot.py  train.py
kobuki_maze/kobuki_maze_rl/urdf/: kobuki_lidar.gazebo.xacro  kobuki_lidar.urdf.xacro  kobuki_lidar_maze.gazebo.xacro  kobuki_lidar_maze.urdf.xacro
kobuki_maze/kobuki_maze_rl/worlds/: maze_world.world
kobuki_maze/kobuki_msgs/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
kobuki_maze/kobuki_msgs/msg/: BumperEvent.msg  ButtonEvent.msg  CliffEvent.msg  ControllerInfo.msg  DigitalInputEvent.msg  DockInfraRed.msg  ExternalPower.msg  MotorPower.msg  SensorState.msg  VersionInfo.msg  WheelDropEvent.msg
(+418 files in other folders)
