cmake_minimum_required(VERSION 3.0.2)
project(abb_irb120)

find_package(catkin REQUIRED COMPONENTS 
  roscpp
  rospy
  std_msgs)

################################################
## Declare ROS messages, services and actions ##
################################################

################################################
## Declare ROS dynamic reconfigure parameters ##
################################################

###################################
## catkin specific configuration ##
###################################

###########
## Build ##
###########

#############
## Install ##
#############

#############
## Testing ##
#############
