<?xml version="1.0"?>
<package format="2">
  <name>abb_irb120</name>
  <version>0.0.1</version>
  <description>Package that contains the description of the robot ABB IRB120</description>

  <maintainer email="jmfajardod@unal.edu.co">Jose Fajardo</maintainer>
  <maintainer email="srealper@unal.edu.co">Sebastian Realpe</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export></export>

</package>
